# bainangua

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vc140.idb  vcpkg.json
bainangua/: CMakeLists.txt  Commands.cpp  Commands.cppm  DescriptorSets.cppm  OneFrame.cpp  OneFrame.cppm  OuterBoilerplate.cpp  OuterBoilerplate.cppm  OuterBoilerplate.ixx  Pipeline.cpp  Pipeline.cppm  PresentationLayer.cpp  PresentationLayer.cppm  PresentationLayer.ixx  ReifyHeaders.cpp  ResourceLoader.cppm  RowType.cpp  RowType.ixx  TextureImage.cppm  UniformBuffer.cppm  VertBuffer.cppm  VertexBuffer.cppm  VmaUsage.cpp  VulkanContext.cppm  bainangua.hpp  white_pumpkin.cpp  white_pumpkin.hpp.in
bainangua/include/: Commands.hpp  OneFrame.hpp  OuterBoilerplate.hpp  Pipeline.hpp  PresentationLayer.hpp  RowType.hpp  bainangua.hpp
bainangua/resources/: Buffers.cppm  CommandBuffer.cppm  CommandQueue.cppm  PerFramePool.cppm  ResourceLoader.cppm  Shader.cppm  StagingBuffer.cppm  VertexBuffer.cppm
bainangua/shaders/: PosColorMVP.vert  Textured.frag  TexturedMVP.vert
bainangua_tests/: bainangua_tests.sln
bainangua_tests/bainangua_tests/: bainangua_tests.vcxproj
tests/: CMakeLists.txt  ImmerBenchmarks.cpp  RowTypeBenchmarks.cpp  RowTypeTests.cpp  nangua_benchmark.cpp  nangua_tests.cpp  nangua_tests.hpp.in  resourceloader_tests.cpp  tests.cpp
tests/resources/: buffer_tests.cpp  commandbuffer_tests.cpp  commandqueue_tests.cpp  perframepool_tests.cpp  resourceloader_tests.cpp  resourceloader_tests.hpp  shader_tests.cpp  stagingbuffer_tests.cpp
